src/test/ui-fulldeps/gated-plugin.stderr
error[E0658]: compiler plugins are deprecated
  --> $DIR/gated-plugin.rs:3:1
   |
LL | #![plugin(empty_plugin)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #29597 <https://github.com/rust-lang/rust/issues/29597> for more information
   = help: add `#![feature(plugin)]` to the crate attributes to enable

warning: use of deprecated attribute `plugin`: compiler plugins are deprecated. See https://github.com/rust-lang/rust/pull/64675
  --> $DIR/gated-plugin.rs:3:1
   |
LL | #![plugin(empty_plugin)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^ help: may be removed in a future compiler version
   |
   = note: `#[warn(deprecated)]` on by default

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0658`.
